Segundo commit de la pagina

--- a/html/grupo.html
+++ b/html/grupo.html
@@ -19,5 +19,28 @@
     </div>
 
     <div class="separador_inicial"></div>
+
+    <h2>Equipos: </h2>
+
+    <ol class="lista_habilidades">
+        <li>
+            <div class="habilidad">
+                <img src="../img/icono habilidades/damageRetribution.png" alt="">
+                <a href="#">LEFTOVERS</a>
+            </div>
+        </li>
+        <li>
+            <div class="habilidad">
+                <img src="../img/icono habilidades/damageRetribution.png" alt="">
+                <a href="#">HECKTACOMB</a>
+            </div>
+        </li>
+        <li>
+            <div class="habilidad">
+                <img src="../img/icono habilidades/damageRetribution.png" alt="">
+                <a href="#">R-Laboratories</a>
+            </div>
+        </li>
+    </ol>
 </body>
 </html>
