--- a/html/personaje.html
+++ b/html/personaje.html
@@ -34,21 +34,21 @@
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
 
         <div class="tarjeta_personaje">
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
 
         <div class="tarjeta_personaje">
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
     </div>
 
@@ -57,28 +57,28 @@
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
 
         <div class="tarjeta_personaje">
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
 
         <div class="tarjeta_personaje">
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
 
         <div class="tarjeta_personaje">
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
     </div>
 
@@ -89,28 +89,28 @@
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
 
         <div class="tarjeta_personaje">
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
 
         <div class="tarjeta_personaje">
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
 
         <div class="tarjeta_personaje">
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
     </div>
 
@@ -119,28 +119,28 @@
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
 
         <div class="tarjeta_personaje">
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
 
         <div class="tarjeta_personaje">
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
 
         <div class="tarjeta_personaje">
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
     </div>
 
@@ -151,28 +151,28 @@
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
 
         <div class="tarjeta_personaje">
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
 
         <div class="tarjeta_personaje">
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
 
         <div class="tarjeta_personaje">
         <h3>Karma</h3>
         <img src="../img/personajes/karma.png">
         <p>asesino de las 10 pistolas</p>
-        <a class="boton_link">Ver mas</a>
+        <a class="boton_link" href="personajes/karma.html">Ver mas</a>
         </div>
     </div>
 
@@ -183,7 +183,7 @@
             <h3>Karma</h3>
             <img src="../img/personajes/karma.png">
             <p>asesino de las 10 pistolas</p>
-            <a class="boton_link">Ver mas</a>
+            <a class="boton_link" href="personajes/karma.html">Ver mas</a>
             </div>
         </div>
 
