--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
         </div> 
     </div>
 
-    
+    <div class="separador_inicial"></div>
+
+    <div class="secion_texto">
+        <h4>OPINION DEL AUTOR: </h4>
+        <div>
+            <img src="img/icon_autor.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores accusamus vel porro in non a dignissimos qui excepturi voluptates, eos exercitationem et delectus optio officia! Libero sint optio laborum alias!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat illum atque possimus placeat sit non distinctio, aut suscipit commodi exercitationem quisquam voluptatibus rem quasi saepe ratione nulla corporis iste hic! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam magni aperiam quod, enim nobis in qui, dolores velit iste illum consequatur. Suscipit voluptatibus sunt eveniet quae aliquid nostrum modi repudiandae?</p>
+        </div>
+    </div>
 </body>
 </html>
